03-bluegreen/02-blue-green-demo-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo
  namespace: default
spec:
  traffic:
    - revisionName: blue-green-demo-00001
      percent: 100 # All traffic goes to this revision
