03-bluegreen/05-blue-green-demo-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo
  namespace: default
spec:
  traffic:
    - revisionName: blue-green-demo-00001
      percent: 50
    - revisionName: blue-green-demo-00002
      percent: 50
      name: v2
