03-bluegreen/06-blue-green-demo-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo
  namespace: default
spec:
  traffic:
    - revisionName: blue-green-demo-00001
      percent: 0
      name: v1
    - revisionName: blue-green-demo-00002
      percent: 100
